# patchouli

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
docs/: llm-wiki-philosophy.md  pdf-profiles.md
prompts/: ask_task.md  ingest_task.md  maintain_task.md  organize_task.md  polish_task.md  search_task.md  synthesize_task.md
scripts/: check_wiki.py  commit.py  env_loader.py  extract.py  file_state.py  indexes.py  lint.py  quotes.py  search.py  text_helpers.py  wiki_inventory.py  workspace_paths.py
system/: page_templates.md
tastes/: active.md  boundary.md  construct.md  mechanism.md
tests/: test_binding_floor.py  test_commit.py  test_extract.py  test_indexes.py  test_search.py  test_wiki_inventory.py
