[project]
name = "patchouli-wiki"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "beautifulsoup4==4.15.0",
    "markdownify==1.2.3",
]

[project.optional-dependencies]
pdf-quality = [
    "docling[rapidocr]==2.111.0",
    "docling-core==2.86.0",
    "docling-ibm-models==3.13.3",
    "docling-parse==7.8.0",
    "numpy==2.4.6",
    "onnxruntime==1.27.0",
    "opencv-python==5.0.0.93",
    "pypdfium2==5.11.0",
    "rapidocr==3.9.1",
    "torch==2.13.0",
    "torchvision==0.28.0",
    "transformers==5.13.0; sys_platform == 'linux'",
    "transformers==5.8.1; sys_platform != 'linux'",
]
pdf-quality-cpu = [
    "docling[rapidocr]==2.111.0",
    "docling-core==2.86.0",
    "docling-ibm-models==3.13.3",
    "docling-parse==7.8.0",
    "numpy==2.4.6",
    "onnxruntime==1.27.0",
    "opencv-python==5.0.0.93",
    "pypdfium2==5.11.0",
    "rapidocr==3.9.1",
    "torch==2.13.0",
    "torchvision==0.28.0",
    "transformers==5.13.0; sys_platform == 'linux'",
    "transformers==5.8.1; sys_platform != 'linux'",
]
pdf-balanced = [
    "numpy==2.4.6",
    "onnxruntime==1.27.0",
    "opencv-python==5.0.0.93",
    "pymupdf==1.28.0",
    "pymupdf-layout==1.28.0",
    "pymupdf4llm==1.28.0",
    "rapidocr-onnxruntime==1.4.4",
]
pdf-fast = [
    "kreuzberg==4.10.0",
]

[tool.uv]
package = false
conflicts = [
    [{ extra = "pdf-quality" }, { extra = "pdf-quality-cpu" }],
    [{ extra = "pdf-quality" }, { extra = "pdf-balanced" }],
    [{ extra = "pdf-quality" }, { extra = "pdf-fast" }],
    [{ extra = "pdf-quality-cpu" }, { extra = "pdf-balanced" }],
    [{ extra = "pdf-quality-cpu" }, { extra = "pdf-fast" }],
    [{ extra = "pdf-balanced" }, { extra = "pdf-fast" }],
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", extra = "pdf-quality-cpu" }]
torchvision = [{ index = "pytorch-cpu", extra = "pdf-quality-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
